Remove references to User, just lean on EntryPoint from gwt, and make our own copy.

--- a/src/main/java/com/vertispan/draw/connected/public/index.html
+++ b/src/main/java/com/vertispan/draw/connected/public/index.html
@@ -23,6 +23,6 @@
     <title>Boxes and Lines</title>
 </head>
 <body>
-<script language='javascript' src='com.vertispan.draw.boxesandlines.BoxesAndLines.nocache.js'></script>
+<script language='javascript' src='com.vertispan.draw.connected.Connected.nocache.js'></script>
 </body>
 </html>
